--- a/index.html
+++ b/index.html
@@ -56,24 +56,29 @@
     </head>
 
     <body>
-        <div class="sp-container">
-            <div class="sp-content">
-                <div class="sp-globe"></div>
-                <h2 class="frame-1">Gửi em</h2>
-                <h2 class="frame-2">Người con gái</h2>
-                <h2 class="frame-3">Mà Anh Thương Nhớ</h2>
-                <h2 class="frame-4">yêu em</h2>
-                <h2 class="frame-5">
-                    <span>Chu</span>
-                    <span>Thị</span>
-                    <span>Hiển</span>
-                </h2>
+        <div class="overlay">
+            <div class="overlay-backdop"></div>
+            <div class="content">
+                <div class="sp-container">
+                    <div class="sp-content">
+                        <div class="sp-globe"></div>
+                        <h2 class="frame-1">Gửi em</h2>
+                        <h2 class="frame-2">Người con gái</h2>
+                        <h2 class="frame-3">Mà Anh Thương Nhớ</h2>
+                        <h2 class="frame-4">yêu em</h2>
+                        <h2 class="frame-5">
+                            <span>Chu</span>
+                            <span>Thị</span>
+                            <span>Hiển</span>
+                        </h2>
+                    </div>
+                </div>
+
+                <canvas id="pinkboard">
+                    <canvas id="pinkboard"> </canvas>
+                </canvas>
             </div>
         </div>
-
-        <canvas id="pinkboard">
-            <canvas id="pinkboard"> </canvas>
-        </canvas>
         <script>
             /*
              * Settings
